@@ -359,8 +359,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © Michal Špaček 2013-2015
- BSD 2-Clause License
+© Michal Špaček 2013-2015
+
+BSD 2-Clause License
 
 =head1 VERSION
 
