@@ -156,8 +156,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2013-2015
-     BSD 2-Clause License
+    © Michal Špaček 2013-2015
+
+    BSD 2-Clause License
 
 VERSION
     0.06
