@@ -1,4 +1,5 @@
 0.06
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
 
 0.05 2015-09-28T17:56:18+02:00
